--- a/styleab.css
+++ b/styleab.css
@@ -54,7 +54,7 @@ h3
 a
 {
     color: #11999E;
-    font-family:'Bodoni Moda', serif;
+    font-family:"Work Sans", sans-serif;
     margin: 10px 20px;
     text-decoration: none;
     font-size: 120%;
